2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/Operation_Order__c.object-meta.xml
<CustomObject>
    <description>Operation Order table is for HK</description>
    <label>Operation Order</label>
    <nameField>
        <displayFormat>OO{YY}{MM}{DD}-{00000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operation Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>