2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Artmove</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Operation Orders</relationshipLabel>
    <relationshipName>Operation_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>