2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <defaultValue>&quot;HT Warehouse&quot;</defaultValue>
    <label>Collection Details (Address &amp; Contact)</label>
    <length>999</length>
    <type>LongTextArea</type>
</CustomField>