2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount 总</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>