2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Annex_A__c.field-meta.xml
<CustomField>
    <fullName>Annex_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annex A</label>
    <type>Checkbox</type>
</CustomField>