2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Barcoding__c.field-meta.xml
<CustomField>
    <fullName>Barcoding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Barcoding 条码</label>
    <type>Checkbox</type>
</CustomField>