2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Barcoding_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Barcoding_Measurement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Barcoding 条码 &amp; Measurement 量度尺码</label>
    <type>Checkbox</type>
</CustomField>