2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/BL_AWB_No__c.field-meta.xml
<CustomField>
    <fullName>BL_AWB_No__c</fullName>
    <label>BL/AWB No.</label>
    <type>TextArea</type>
</CustomField>