2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Call_before_delivery__c.field-meta.xml
<CustomField>
    <fullName>Call_before_delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call before arrival 到之前钟致电 (30min)</label>
    <type>Checkbox</type>
</CustomField>