2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Client_Account_2__c.field-meta.xml
<CustomField>
    <fullName>Client_Account_2__c</fullName>
    <description>For HK</description>
    <inlineHelpText>Collector is defined as the person or entity who owns the item.</inlineHelpText>
    <label>Collector</label>
    <length>65</length>
    <type>Text</type>
</CustomField>