2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Collection__c.field-meta.xml
<CustomField>
    <fullName>Collection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collection 收货</label>
    <type>Checkbox</type>
</CustomField>