2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Collection_Order__c.field-meta.xml
<CustomField>
    <fullName>Collection_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collection Order 收货单</label>
    <type>Checkbox</type>
</CustomField>