2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Collector__c.field-meta.xml
<CustomField>
    <fullName>Collector__c</fullName>
    <formula>Job_Reference__r.Client_Account__r.artApp__Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collector</label>
    <type>Text</type>
</CustomField>