2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Condition_Check_Report__c.field-meta.xml
<CustomField>
    <fullName>Condition_Check_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visual check report 驗貨報告</label>
    <type>Checkbox</type>
</CustomField>