2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Condition_Check_WWI__c.field-meta.xml
<CustomField>
    <fullName>Condition_Check_WWI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visual Check 验货</label>
    <type>Checkbox</type>
</CustomField>