2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Contact_no__c.field-meta.xml
<CustomField>
    <fullName>Contact_no__c</fullName>
    <label>Client no. 联络电话</label>
    <type>Phone</type>
</CustomField>