2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Contact_nos__c.field-meta.xml
<CustomField>
    <fullName>Contact_nos__c</fullName>
    <defaultValue>$User.Phone</defaultValue>
    <label>CS Contact No.</label>
    <type>Phone</type>
</CustomField>