2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Contact_person__c.field-meta.xml
<CustomField>
    <fullName>Contact_person__c</fullName>
    <label>Contact Person 联络人</label>
    <length>50</length>
    <type>Text</type>
</CustomField>