2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Container_Stuffing_Form__c.field-meta.xml
<CustomField>
    <fullName>Container_Stuffing_Form__c</fullName>
    <label>Container Stuffing Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>