2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Crate_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Crate_Dimensions__c</fullName>
    <label>Crate Dimensions</label>
    <type>TextArea</type>
</CustomField>