2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Crate_Disposal__c.field-meta.xml
<CustomField>
    <fullName>Crate_Disposal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dispose Empty Crates 弃掉吉箱</label>
    <type>Checkbox</type>
</CustomField>