2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Crating__c.field-meta.xml
<CustomField>
    <fullName>Crating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crating 装箱</label>
    <type>Checkbox</type>
</CustomField>