2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Created_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Created_DateTime__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created DateTime</label>
    <type>DateTime</type>
</CustomField>