2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Crew_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Crew_Assigned__c</fullName>
    <label>Crew Assigned</label>
    <type>TextArea</type>
</CustomField>