2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Crew_Ops__c.field-meta.xml
<CustomField>
    <fullName>Crew_Ops__c</fullName>
    <label>Crew (Ops)</label>
    <type>TextArea</type>
</CustomField>