2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Crew_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Crew_Warehouse__c</fullName>
    <label>Crew (WH)</label>
    <type>TextArea</type>
</CustomField>