2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/CS_in_charge__c.field-meta.xml
<CustomField>
    <fullName>CS_in_charge__c</fullName>
    <defaultValue>$User.FirstName+&quot; &quot;+ $User.LastName</defaultValue>
    <label>CS in-charge</label>
    <length>45</length>
    <type>Text</type>
</CustomField>