2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency 币</label>
    <length>3</length>
    <type>Text</type>
</CustomField>