2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Job Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>