2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Date_of_Arrival_at_WH__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Arrival_at_WH__c</fullName>
    <label>ETA WH</label>
    <type>Date</type>
</CustomField>