2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Date_of_Arrival_Departure__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Arrival_Departure__c</fullName>
    <label>Warehouse Handling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arrival</fullName>
            </value>
            <value>
                <fullName>Departure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>