2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/De_install__c.field-meta.xml
<CustomField>
    <fullName>De_install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>De-install 拆</label>
    <type>Checkbox</type>
</CustomField>