2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery 送货</label>
    <type>Checkbox</type>
</CustomField>