2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Delivery_Order__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Order 送货单</label>
    <type>Checkbox</type>
</CustomField>