2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Dimensionss__c.field-meta.xml
<CustomField>
    <fullName>Dimensionss__c</fullName>
    <defaultValue>&quot;[Auto Populate from Job Reference Page - Packed Dimensions]&quot;</defaultValue>
    <label>Dimensions</label>
    <length>1600</length>
    <type>LongTextArea</type>
</CustomField>