2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Empty_Crates_to_be__c.field-meta.xml
<CustomField>
    <fullName>Empty_Crates_to_be__c</fullName>
    <label>Empty Crates to be 吉箱要</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stored 存</fullName>
            </value>
            <value>
                <fullName>Disposed 弃</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>