2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>Extend to</label>
    <type>Date</type>
</CustomField>