2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/ExhibitionN__c.field-meta.xml
<CustomField>
    <fullName>ExhibitionN__c</fullName>
    <formula>Job_Reference__r.ExhibitionN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exhibition</label>
    <type>Text</type>
</CustomField>