2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>No. of Signatures (共几份签收))</label>
    <length>3</length>
    <type>Text</type>
</CustomField>