2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Gate_Charge_HKD__c.field-meta.xml
<CustomField>
    <fullName>Gate_Charge_HKD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Gate Charge 入门费 (HKD)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>