2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/ID_Copy_Passport__c.field-meta.xml
<CustomField>
    <fullName>ID_Copy_Passport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photograph ID/Passport 拍摄身份证/护照</label>
    <type>Checkbox</type>
</CustomField>