2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Install__c.field-meta.xml
<CustomField>
    <fullName>Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Install 安装</label>
    <type>Checkbox</type>
</CustomField>