2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice 发票</label>
    <type>Checkbox</type>
</CustomField>