2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <label>Job Description 描述</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>