2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Job_Details__c.field-meta.xml
<CustomField>
    <fullName>Job_Details__c</fullName>
    <label>Job Details 细节</label>
    <length>2999</length>
    <type>LongTextArea</type>
</CustomField>