2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Job_Reference__c.field-meta.xml
<CustomField>
    <fullName>Job_Reference__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Reference</label>
    <referenceTo>Job_Reference__c</referenceTo>
    <relationshipLabel>Operation Orders</relationshipLabel>
    <relationshipName>Operation_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>