2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Job_Tasked__c.field-meta.xml
<CustomField>
    <fullName>Job_Tasked__c</fullName>
    <label>Job Tasked1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>White -&gt; Not Applicable</fullName>
            </value>
            <value>
                <fullName>Green -&gt; Done</fullName>
            </value>
            <value>
                <fullName>Red -&gt; Not Yet Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>