2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/JobComInfoUpd_Status__c.field-meta.xml
<CustomField>
    <fullName>JobComInfoUpd_Status__c</fullName>
    <formula>IF( ISPICKVAL(Job_Completed_Infoi__c ,&quot;Green -&gt; Done&quot;) , IMAGE(&quot;/servlet/servlet.FileDownload?file=0152000000146yQ&quot;, &quot;Green&quot;, 17,17),
IF( ISPICKVAL(Job_Completed_Infoi__c ,&quot;White -&gt; Not Applicable&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0152000000146yV&quot;, &quot;Black&quot;, 17,17),

IF( ISBLANK(TEXT(Job_Completed_Infoi__c)), IMAGE(&quot;/servlet/servlet.FileDownload?file=0152000000146yL&quot;, &quot;Red&quot;, 17,17),

IF( ISPICKVAL(Job_Completed_Infoi__c ,&quot;Red -&gt; Not Yet Done&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0152000000146yL&quot;, &quot;Red&quot;, 17,17), null)
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Completed / Info Updated</label>
    <type>Text</type>
</CustomField>