2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Make_carton_Jackets__c.field-meta.xml
<CustomField>
    <fullName>Make_carton_Jackets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Make Carton Jackets 造纸盒</label>
    <type>Checkbox</type>
</CustomField>