2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Measurement_WWI__c.field-meta.xml
<CustomField>
    <fullName>Measurement_WWI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Measurement 量度尺码</label>
    <type>Checkbox</type>
</CustomField>