2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Mod_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Mod_DateTime__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mod DateTime</label>
    <type>DateTime</type>
</CustomField>