2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/No_of_Crew__c.field-meta.xml
<CustomField>
    <fullName>No_of_Crew__c</fullName>
    <label>No. of Crew</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>