2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/OO_Type__c.field-meta.xml
<CustomField>
    <fullName>OO_Type__c</fullName>
    <label>OO Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OPS</fullName>
            </value>
            <value>
                <fullName>ATL</fullName>
            </value>
            <value>
                <fullName>ATL (ABHK)</fullName>
            </value>
            <value>
                <fullName>CHS</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>GG</fullName>
            </value>
            <value>
                <fullName>GG23</fullName>
            </value>
            <value>
                <fullName>HWL</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
            <value>
                <fullName>RW</fullName>
            </value>
            <value>
                <fullName>TY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>