2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Other_Document_s__c.field-meta.xml
<CustomField>
    <fullName>Other_Document_s__c</fullName>
    <label>Other Document(s)</label>
    <type>TextArea</type>
</CustomField>