2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Others_WWI__c.field-meta.xml
<CustomField>
    <fullName>Others_WWI__c</fullName>
    <label>Others</label>
    <type>TextArea</type>
</CustomField>