2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Pack__c.field-meta.xml
<CustomField>
    <fullName>Pack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pack 包装</label>
    <type>Checkbox</type>
</CustomField>