2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Packing_materials__c.field-meta.xml
<CustomField>
    <fullName>Packing_materials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bring packing materials 带包装物料</label>
    <type>Checkbox</type>
</CustomField>