2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Collect Payment 收付款</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Cash or Cheque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>