2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Permits_Others__c.field-meta.xml
<CustomField>
    <fullName>Permits_Others__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permits/Others 许可证</label>
    <type>Checkbox</type>
</CustomField>