2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Photo_taking__c.field-meta.xml
<CustomField>
    <fullName>Photo_taking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Take Photos 拍照</label>
    <type>Checkbox</type>
</CustomField>