2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Pickup_Report_at__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Report_at__c</fullName>
    <label>Delivery Details (Address &amp; Contact)</label>
    <length>999</length>
    <type>LongTextArea</type>
</CustomField>