2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Purpose_WWI__c.field-meta.xml
<CustomField>
    <fullName>Purpose_WWI__c</fullName>
    <label>Purpose</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Local Delivery</fullName>
            </value>
            <value>
                <fullName>Crating</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Viewing</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Carton Jacket</fullName>
            </value>
            <value>
                <fullName>Self-Collection</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>