2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Receive_OrderHK__c.field-meta.xml
<CustomField>
    <fullName>Receive_OrderHK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive Order 接貨單</label>
    <type>Checkbox</type>
</CustomField>