2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Receive_WWI__c.field-meta.xml
<CustomField>
    <fullName>Receive_WWI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive</label>
    <type>Checkbox</type>
</CustomField>