2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Received_Released_by__c.field-meta.xml
<CustomField>
    <fullName>Received_Released_by__c</fullName>
    <label>Received/Released by</label>
    <length>40</length>
    <type>Text</type>
</CustomField>