2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Release</label>
    <type>Checkbox</type>
</CustomField>