2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Release_Order__c.field-meta.xml
<CustomField>
    <fullName>Release_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Release Order 放貨單</label>
    <type>Checkbox</type>
</CustomField>