2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Remarks_DocAck__c.field-meta.xml
<CustomField>
    <fullName>Remarks_DocAck__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>