2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Remove_Old_Labels__c.field-meta.xml
<CustomField>
    <fullName>Remove_Old_Labels__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Old Labels 除去原有標籤</label>
    <type>Checkbox</type>
</CustomField>