2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Repack__c.field-meta.xml
<CustomField>
    <fullName>Repack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repack 重装</label>
    <type>Checkbox</type>
</CustomField>