2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Retrieve_WWI__c.field-meta.xml
<CustomField>
    <fullName>Retrieve_WWI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retrieve 取出</label>
    <type>Checkbox</type>
</CustomField>