2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service 服务</label>
    <type>Checkbox</type>
</CustomField>