2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Service_Order__c.field-meta.xml
<CustomField>
    <fullName>Service_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Order 服务单</label>
    <type>Checkbox</type>
</CustomField>