2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/SF_Updated_Check__c.field-meta.xml
<CustomField>
    <fullName>SF_Updated_Check__c</fullName>
    <label>SF Updates Checked1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>White -&gt; Not Applicable</fullName>
            </value>
            <value>
                <fullName>Green -&gt; Done</fullName>
            </value>
            <value>
                <fullName>Red -&gt; Not Yet Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>